--- a/kharma/CMakeLists.txt
+++ b/kharma/CMakeLists.txt
@@ -34,6 +34,7 @@ AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/grmhd EXE_NAME_SRC)
 AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/implicit EXE_NAME_SRC)
 AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/inverter EXE_NAME_SRC)
 AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/multizone EXE_NAME_SRC)
+AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/ismr EXE_NAME_SRC)
 AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/reductions EXE_NAME_SRC)
 AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/wind EXE_NAME_SRC)
 
@@ -60,6 +61,7 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/grmhd)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/implicit)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/inverter)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/multizone)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/ismr)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/reductions)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/wind)
 
@@ -95,22 +97,16 @@ endif()
 # These are almost universally performance trade-offs,
 # or disabling features that need dependencies.
 # TODO is there any way to make compile options less painful in CMake?
-option(FUSE_FLUX_KERNELS "Bundle the usual four flux calculation kernels (floors,R,L,apply) into one" ON)
-option(FUSE_FLOOR_KERNELS "Bundle applying the floors and ceilings into one kernel" ON)
+option(KHARMA_SPLIT_IMPLICIT_SOLVE "Split the implicit solver kernel into three. Only faster on Frontier, so far" OFF)
 option(FAST_CARTESIAN "Break operation in curved spacetimes to make Cartesian Minkowski space computations faster" OFF)
 option(KHARMA_DISABLE_IMPLICIT "Disable the implicit solver, which requires bundled kokkos-kernels. Default false" OFF)
 option(KHARMA_DISABLE_CLEANUP "Disable the magnetic field cleanup module, which requires recent Parthenon. Default false" OFF)
 option(KHARMA_TRACE "Compile with tracing: print entry and exit of important functions. Default false" OFF)
 
-if(FUSE_FLUX_KERNELS)
-    target_compile_definitions(${EXE_NAME} PUBLIC FUSE_FLUX_KERNELS=1)
+if(KHARMA_SPLIT_IMPLICIT_SOLVE)
+    target_compile_definitions(${EXE_NAME} PUBLIC SPLIT_IMPLICIT_SOLVE=1)
 else()
-    target_compile_definitions(${EXE_NAME} PUBLIC FUSE_FLUX_KERNELS=0)
-endif()
-if(FUSE_FLOOR_KERNELS)
-    target_compile_definitions(${EXE_NAME} PUBLIC FUSE_FLOOR_KERNELS=1)
-else()
-    target_compile_definitions(${EXE_NAME} PUBLIC FUSE_FLOOR_KERNELS=0)
+    target_compile_definitions(${EXE_NAME} PUBLIC SPLIT_IMPLICIT_SOLVE=0)
 endif()
 if(FAST_CARTESIAN)
     message("Compiling for Cartesian coordinates only. GRMHD will be disabled!")
